--- a/package.json
+++ b/package.json
@@ -1,1 +1,30 @@
-{}
+{
+    "name": "djs-v12-template",
+    "version": "1.0.0-beta",
+    "description": "Simple DJS Bot Template",
+    "main": "index.js",
+    "dependencies": {
+        "@tensorflow-models/universal-sentence-encoder": "^1.3.2",
+        "@tensorflow/tfjs-converter": "^2.8.0",
+        "@tensorflow/tfjs-core": "^2.8.0",
+        "@tensorflow/tfjs-node": "^2.8.0",
+        "chokidar": "^3.4.3",
+        "discord.js": "^12.4.1",
+        "fs": "^0.0.1-security",
+        "hastebin-gen": "^2.0.5",
+        "moment": "^2.29.1",
+        "node-fetch": "^2.6.1",
+        "path": "^0.12.7",
+        "pretty-ms": "^7.0.1",
+        "quick.db": "^7.1.3"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+        "DJS"
+    ],
+    "author": "CyberCDN",
+    "license": "MIT"
+}
